@@ -12,7 +12,7 @@
 #  windowresolution: Scale the window to this size IF the output device supports hardware scaling.
 #                        (output=surface does not!)
 #            output: What video system to use for output.
-#                      Possible values: surface, overlay, opengl, openglnb, openglhq, ddraw.
+#                      Possible values: default, surface, overlay, opengl, openglnb, openglhq, ddraw.
 #          autolock: Mouse will automatically lock, if you click on the screen. (Press CTRL-F10 to unlock)
 # autolock_feedback: Autolock status feedback type, i.e. visual, auditive, none.
 #                      Possible values: none, beep, flash.
@@ -50,7 +50,7 @@ fullscreen        = false
 fulldouble        = false
 fullresolution    = desktop
 windowresolution  = original
-output            = surface
+output            = default
 autolock          = false
 autolock_feedback = beep
 clip_key_modifier = shift
